# arrower

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: windows-release.yml
include/arrower/: app_paths.hpp  config.hpp  input_state.hpp  key_codes.hpp  movement_engine.hpp  windows_keyboard_hook.hpp  windows_mouse_controller.hpp
packaging/windows/: arrower.iss  arrower.nsi
src/: app_paths.cpp  binding_capture_button.cpp  binding_capture_button.hpp  config.cpp  input_state.cpp  key_codes.cpp  main.cpp  movement_engine.cpp  settings_window.cpp  settings_window.hpp  tray_application.cpp  tray_application.hpp  windows_keyboard_hook.cpp  windows_mouse_controller.cpp
tests/: config_tests.cpp  input_state_tests.cpp  key_codes_tests.cpp  movement_engine_tests.cpp
